@@ -13,6 +13,8 @@
   xfce4-settings-manager so that one can make it show any of its 
   children at startup.
 - Review strings.
+- Fully update the appearance dialog when the settings are changed in
+  another dialog or with xfconf-query.
 - Translation updates: Basque, Brazilian Portuguese, Catalan, Czech, 
   Finnish, French, German, Greek, Hungarian, Indonesian, Japanese, 
   Norwegian Bokmal, Spanish, Swedish, Turkish, Ukrainian.
